--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
                 <div class="barra-navegacao"> <!--DIV PAi da LOGO e Menu-->
 
-                    <img src="imagens/logo01.png" alt="Logomarca da Empresa">
+                    <a href="#"><img src="imagens/logo01.png" alt="Logomarca da Empresa"></a>
                     
                     <nav>
                         <ul class="menu">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#">Projetos</a></li>
                         <li><a href="#">Contatos</a></li>
                         </ul>
@@ -41,7 +41,7 @@
                     <nav>
                         <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#">Projetos</a></li>
                         <li><a href="#">Contatos</a></li>
                         </ul>
@@ -91,7 +91,7 @@
     </main>
 
     <!-- SOBRE -->
-    <section class="sobre">
+    <section class="sobre" id="sobre">
         <div class="interface-universal">
             <h3 class="titulo-sessao">Sobre</h3>
 
