--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="interface-universal">
             <div class="pai-footer">
 
-                <img id="footer" src="imagens/logo-footer.png" alt="Logomarca">
+                <img src="imagens/logo-footer.png" alt="Logomarca">
                 <h3>Edvaldo Júnior</h3>
                 <h4>Front-End Developer</h4>
                 
@@ -144,7 +144,7 @@
 
                     <div class="icon-email">
                         <i class="fa-solid fa-envelope"></i>
-                        <p>edvaldojunior77@gmail.com</p>
+                        <p id="footer">edvaldojunior77@gmail.com</p>
                     </div>
                 </div><!--icon-contato-->
 
